fix: email doublon + formatage dates dans templates email formation