@@ -1,5 +1,6 @@
 package esprit.pfe.serviceformation.controllers;
 
+import esprit.d2f.common.security.AuthorizationMatrix;
 import esprit.pfe.serviceformation.dto.FormationDTO;
 import esprit.pfe.serviceformation.dto.InscriptionDTO;
 import esprit.pfe.serviceformation.dto.InscriptionSummaryDTO;
@@ -7,13 +8,14 @@ import esprit.pfe.serviceformation.entities.*;
 import esprit.pfe.serviceformation.repositories.FormationCompetenceRepository;
 import esprit.pfe.serviceformation.repositories.InscriptionRepository;
 import esprit.pfe.serviceformation.services.InscriptionService;
-import org.springframework.http.HttpStatus;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableDefault;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/inscription")
@@ -31,64 +33,46 @@ public class InscriptionController {
         this.formationCompetenceRepository = formationCompetenceRepository;
     }
 
-    // 1. Récupérer les formations ouvertes
     @GetMapping("/formations/accessibles")
-    public List<FormationDTO> getFormationsAccessibles(
-            @RequestParam String enseignantId) {
-        return service.listerFormationsAccessibles(enseignantId);
+    @PreAuthorize(AuthorizationMatrix.INSCRIPTION_READ)
+    public ResponseEntity<Page<FormationDTO>> getFormationsAccessibles(
+            @RequestParam String enseignantId,
+            @PageableDefault(size = 20, sort = "idFormation") Pageable pageable) {
+        return ResponseEntity.ok(service.listerFormationsAccessibles(enseignantId, pageable));
     }
 
-    // 2. Demander une inscription
     @PostMapping("/inscriptions")
+    @PreAuthorize(AuthorizationMatrix.INSCRIPTION_CREATE)
     public Inscription postInscription(
             @RequestParam Long formationId,
             @RequestParam String enseignantId) {
         return service.demanderInscription(formationId, enseignantId);
     }
 
-    // 3. Lister les inscriptions par formation
     @GetMapping("/formations/{formationId}/inscriptions")
-    public List<InscriptionDTO> getInscriptionsByFormation(@PathVariable Long formationId) {
-        try {
-            return service.listerInscriptionsParFormation(formationId);
-        } catch (IllegalArgumentException ex) {
-            // levé si la formation n'existe pas
-            throw new ResponseStatusException(
-                    HttpStatus.NOT_FOUND,
-                    ex.getMessage(),
-                    ex);
-        } catch (Exception ex) {
-            // toute autre erreur inattendue
-            throw new ResponseStatusException(
-                    HttpStatus.INTERNAL_SERVER_ERROR,
-                    "Erreur interne lors de la récupération des inscriptions",
-                    ex);
-        }
+    @PreAuthorize(AuthorizationMatrix.INSCRIPTION_READ)
+    public ResponseEntity<Page<InscriptionDTO>> getInscriptionsByFormation(
+            @PathVariable Long formationId,
+            @PageableDefault(size = 20, sort = "id") Pageable pageable) {
+        return ResponseEntity.ok(service.listerInscriptionsParFormation(formationId, pageable));
     }
 
-    // 4. Approuver ou rejeter une demande
     @PutMapping("/inscriptions/{id}/traiter")
+    @PreAuthorize(AuthorizationMatrix.INSCRIPTION_APPROVE)
     public Inscription traiter(
             @PathVariable Long id,
             @RequestParam boolean approuver) {
         return service.traiterDemande(id, approuver);
     }
 
-    /**
-     * Retourne le résumé des formations suivies par un enseignant.
-     * Utilisé par le Skill Passport (service-analyse) pour agréger le profil.
-     * Accessible à tout utilisateur authentifié.
-     *
-     * Contrat stable : GET /api/v1/inscription/enseignant/{enseignantId}
-     */
     @GetMapping("/enseignant/{enseignantId}")
-    public ResponseEntity<List<InscriptionSummaryDTO>> getByEnseignant(
-            @PathVariable String enseignantId) {
-        List<InscriptionSummaryDTO> result = inscriptionRepository
-                .findByEnseignant_Id(enseignantId)
-                .stream()
-                .map(this::toSummary)
-                .toList();
+    @PreAuthorize(AuthorizationMatrix.INSCRIPTION_READ)
+    public ResponseEntity<Page<InscriptionSummaryDTO>> getByEnseignant(
+            @PathVariable String enseignantId,
+            @PageableDefault(size = 20, sort = "id") Pageable pageable) {
+        Page<InscriptionSummaryDTO> result = inscriptionRepository
+                .findByEnseignant_Id(enseignantId, pageable)
+                .map(this::toSummary);
         return ResponseEntity.ok(result);
     }
 
@@ -98,7 +82,7 @@ public class InscriptionController {
                 .findByFormationIdFormation(f.getIdFormation())
                 .stream()
                 .map(fc -> fc.getCompetenceNom() != null ? fc.getCompetenceNom() : String.valueOf(fc.getCompetenceId()))
-                .collect(Collectors.toList());
+                .toList();
 
         return InscriptionSummaryDTO.builder()
                 .formationId(String.valueOf(f.getIdFormation()))
